@@ -7,12 +7,7 @@ module Splib
             raise ArgumentError.new('Missing required argument: :delta') unless args[:delta]
             e = args[:expected].to_f
             d = args[:delta].to_f
-            mult = 0
-            if(pos = d.to_s.index('.'))
-                mult = (d.to_s.length - (pos + 1))
-            end
-            mult = 10 ** mult
-            ((e*mult) - (self*mult)).abs <= (d*mult)
+            self.between?(e-d, e+d)
         end
     end
 end
